# voice-assistant

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  generate_test_audio.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: python-tests.yml
tests/: test_audio.py  test_bdd_weather.py  test_benchmark.py  test_command_router_order.py  test_e2e.py  test_end_to_end.py  test_integration.py  test_listen_command.py  test_main_bugfixes.py  test_mismatch.py  test_play_music.py  test_regression.py  test_security.py  test_specs.py  test_unit.py
tests/features/: weather.feature
