[project]
name = "voice-assistant"
version = "0.1.0"
description = "AI Project with Audio, CV, and LLM"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "setuptools>=75.0.0",
    "fastapi==0.133.1",
    "uvicorn>=0.34.0",
    "pydantic-settings>=2.7.0",
    "openai>=1.60.0",
    "langchain-openai>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    "langsmith>=0.3.0",
    "chromadb>=0.6.0",
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "librosa>=0.10.2",
    "SpeechRecognition>=3.10.4",
    "pyttsx3>=2.90",
    "pyaudio~=0.2.14",
    "openai-whisper>=20240930",
    "sounddevice>=0.5.0",
    "deepface>=0.0.92",
    "tf-keras==2.20.1",
    "opencv-python-headless~=4.10.0",
    "e2b_code_interpreter>=0.0.10",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.20",
    "websockets>=14.0",
]
